# proxysql

./: .gitignore  .travis.yml  766.patch  Aurora_Automated_Testing.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTE.md  Dockerfile  FAQ.md  INSTALL.md  Makefile  Makefile.BSD  README.md  README.rst  RUNNING.md  Read_Only_Testing.md  bounty.md  compile_examples.txt  docker-compose.yml  how eba540af7da16b312050cab4b003e3e54c7bc457  index.html.1  index.html?helo.1  proxysql_notes.txt  requirements.txt  scenarios.py  testing_jenkins
.github/: ISSUE_TEMPLATE.md  issue_template.md
.github/workflows/: CI-3p-django-framework.yml  CI-3p-laravel-framework.yml  CI-3p-mariadb-connector-c.yml  CI-3p-mysql-connector-j.yml  CI-3p-php-pdo-mysql.yml  CI-3p-postgresql.yml  CI-3p-sqlalchemy.yml  CI-basictests.yml  CI-builds.yml  CI-cb_taptests.yml  CI-codeql.yml  CI-darwin.yml  CI-maketest.yml  CI-package-build.yml  CI-repltests.yml  CI-selftests.yml  CI-shuntest.yml  CI-taptests-asan.yml  CI-taptests-groups.yml  CI-taptests-ssl.yml  CI-taptests.yml  CI-trigger.yml  build.yml  c-cpp.yml  ci-3p-django-framework.yml  ci-3p-laravel-framework.yml  ci-3p-laravel-framework_mariadb.yml  ci-3p-laravel-framework_mysql.yml  ci-3p-mariadb-connector-c.yml  ci-3p-mysql-connector-j.yml  ci-3p-php-pdo-mysql.yml  ci-3p-postgresql.yml  ci-3p-sqlalchemy.yml  ci-3p-sqlalchemy_mariadb.yml  ci-3p-sqlalchemy_mysql.yml  ci-basictests.yml  ci-builds.yml  ci-cb_taptests.yml  ci-codeql.yml  ci-maketest.yml  (+12 more)
binaries/: proxysql-0.3-1.x86_64.rpm  proxysql_0.3_all.deb
diamond/: ProxySQLCollector.conf  README.md  proxysqlstat.py
doc/: SSL.md  admin_tables.md  cluster.md  configuration.md  configuration_howto.md  configuration_system.md  design_goals.md  global_variables.md  mirroring.md  monitor.md  packaging.md  passwords.md  proxysql-admin.md  query_cache.md  scheduler.md
doc/internal/: MySQL_Connection.md  MySQL_Session.md  PROXYSQLTEST.md  ProxySQL_Authentication.md  Standard_ProxySQL_Admin.txt  Stats_API.txt  command_line_options.txt  debug_filters.md  global_variables.txt  query_parser.txt
doc/manpage/: proxysql.1
doc/proxysql_cluster/: proxysql_cluster_working.md
doc/release_notes/: ProxySQL_v1.2.2.md  ProxySQL_v1.2.3.md  (+10 more)
docker/: Dockerfile
etc/: proxysql-admin.cnf  proxysql.cnf
include/: Admin_ifaces.h  AlertRouter.h  AlertServiceConnector.h  Base_HostGroups_Manager.h  Base_Session.h  Base_Thread.h  CMakeLists.txt  ClickHouseServer.hpp  ClickHouse_Authentication.hpp  ClickHouse_Server.h  Client_Session.h  Command_Counter.h  GTID_Server_Data.h  Makefile  MySQL_Authentication.hpp  MySQL_Data_Stream.h  MySQL_HostGroups_Manager.h  MySQL_LDAP_Authentication.hpp  MySQL_Logger.hpp  MySQL_Monitor.hpp  MySQL_PreparedStatement.h  MySQL_Prepared_Stmt_info.h  MySQL_Protocol.h  MySQL_Query_Cache.h  MySQL_Query_Processor.h  MySQL_Session.h  MySQL_Thread.h  MySQL_Variables.h  MySQL_encode.h  NetBuffers.h  OpsGenieConnector.h  PagerdutyConnector.h  PgSQL_Authentication.h  PgSQL_Backend.h  PgSQL_Connection.h  PgSQL_Data_Stream.h  PgSQL_Error_Helper.h  PgSQL_HostGroups_Manager.h  PgSQL_Logger.hpp  PgSQL_Monitor.hpp  (+89 more)
include/old/: shared_query_cache.h
include_old/: cpp.h  mysql_backend.h  mysql_data_stream.h  mysql_session.h  mysql_thread.h  proxysql.h  proxysql_debug.h  proxysql_macros.h  proxysql_structs.h
lib/: Admin_Bootstrap.cpp  Admin_FlushVariables.cpp  Admin_Handler.cpp  AlertRouter.cpp  BaseHGC.cpp  BaseSrvList.cpp  Base_HostGroups_Manager.cpp  Base_Session.cpp  Base_Thread.cpp  Chart_bundle_js.cpp  ClickHouseServer.cpp  ClickHouse_Authentication.cpp  ClickHouse_Server.cpp  Client_Session.cpp  GTID_Server_Data.cpp  KV_Btree_Array.cpp  Makefile  Makefile.BSD  MyHGC.cpp  MySQL_Authentication.cpp  MySQL_Data_Stream.cpp  MySQL_HostGroups_Manager.cpp  MySQL_Logger.cpp  MySQL_Monitor.cpp  MySQL_PreparedStatement.cpp  MySQL_Protocol.cpp  MySQL_Query_Cache.cpp  MySQL_Query_Processor.cpp  MySQL_ResultSet.cpp  MySQL_Session.cpp  MySQL_Session.cpp_old  MySQL_Thread.cpp  MySQL_Variables.cpp  MySQL_encode.cpp  MySrvC.cpp  MySrvConnList.cpp  MySrvList.cpp  NetBuffers.cpp  OpsGenieConnector.cpp  PagerdutyConnector.cpp  (+91 more)
lib_old/: Makefile  debug.c  mysql_backend.cpp  mysql_data_stream.c  mysql_data_stream.cpp  mysql_protocol.c  mysql_session.cpp  mysql_thread.cpp  network.c
microbench/: PR1977_bench.cpp
notes/: run_sysbench_on_sqlite3.md
oldcode/: README.rst
reproduce/: .env  docker-compose.yml  generate-load.sh  node-error.sh  proxysql.cnf
scripts/: README.md  add_mysql_user.sh  change_host_status.sh  export_users.py  flush_query_cache.sh  kill_idle_backend_conns.py  metrics.py  proxysql_config.sh  stats_scrapper.py
src/: 1.log.1  Makefile  Makefile.BSD  SQLite3_Server.cpp  cachegrind.out.19901  cachegrind.out.20086  cachegrind.out.20262  cachegrind.out.20441  cachegrind.out.20800  events.log.00000004  events.log.00000005  gdb-commands.txt  http_server.key  http_server.pem  main.cpp  massif.out.7999  newreq.pem  privkey.pem  proxy_tls.cpp  proxysql.cfg  proxysql_global.cpp  rndtar_17312717963908321536.tar  test1.c
systemd/: proxysql.conf  proxysql.service
test/: Makefile  admin_tables_test.py  admin_test.py  authentication_test.py  build_images.py  check_result.py  config_file_parsing_test.py  docker_fleet.py  env.sh  how_to.md  how_to_run_tests.md  main  main.cpp  monot  monot.cpp  one_backend_test.py  proxysql-tests.ini.example  proxysql_base_test.py  proxysql_ping_thread.py  proxysql_test.py  proxysql_tests_config.py  replication_topology_awareness_test.py  scenarios.py  select_for_update.sql  sqlite_history_convert.cpp  sysbench_test.py  triangle.cpp  vector  vector.cpp  vol  vol.c
tools/: Makefile  check_variables.pl  defcon  eventslog_reader_sample.cpp  proxysql-admin  proxysql_clean_stats_history.sh  proxysql_galera_checker  proxysql_galera_checker.sh  proxysql_galera_writer.pl  proxysql_node_monitor  reduce.sh  refresh.sh  refresh_reset.sh
trash/: Local_Query_Cache.cpp  global_variables.c  l_pow  l_pow.c  local_query_cache.h  main.c  regex1  regex1.cpp  regex2  regex2.cpp  regex3  regex3.cpp
(+936 files in other folders)
